Fix image overflow

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system,
@@ -68,7 +71,6 @@ a {
 .image-link:active::before {
   content: "⏳";
   padding: 0.8em;
-  box-sizing: border-box;
   background: rgba(255,255,255,0.97);
   position: absolute;
   pointer-events: none;
@@ -79,20 +81,12 @@ a {
     width: 105px;
     height: 105px;
   }
-  .lightbox-image {
-    max-height: 375px;
-    max-width: 310px;
-  };
 }
 /* iphone 6 and X */
 @media (min-width: 374px) {
   .image-link {
     width: 123px;
     height: 123px;
-  }
-  .lightbox-image {
-    max-height: 450px;
-    max-width: 365px;
   }
 }
 /* iphone 6+ */
@@ -101,20 +95,12 @@ a {
     width: 136px;
     height: 136px;
   }
-  .lightbox-image {
-    max-height: 550px;
-    max-width: 404px;
-  }
 }
 /* anythig bigger and iphone 6+ */
 @media (min-width: 415px) {
   .image-link {
     width: auto;
     height: auto;
-  }
-  .lightbox-image {
-    max-width: 90%;
-    max-height: 54%;
   }
 }
 
@@ -127,7 +113,6 @@ a {
 }
 .image-thumb__icon:active::before {
   content: "⏳";
-  box-sizing: border-box;
   background: rgba(255,255,255,0.6);
   position: absolute;
   pointer-events: none;
@@ -149,7 +134,6 @@ a {
   justify-content: center;
 }
 .lightbox__icons {
-  box-sizing: border-box;
   display: flex;
   width: 100%;
   padding: 0.5em;
@@ -170,4 +154,19 @@ a {
   height: 100%;
   justify-content: space-between;
   flex-direction: column;
+}
+.lightbox__slide {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.lightbox-image {
+  max-height: 100%;
+  max-width: 100%;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
